--- a/package.json
+++ b/package.json
@@ -23,17 +23,23 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "command": "^0.0.5",
     "date-fns": "^3.6.0",
+    "dialog": "^0.3.1",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
     "next-intl": "^3.15.2",
+    "popover": "^2.4.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-slick": "^0.30.2",
+    "shadcn-ui": "^0.8.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
