--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.52.0",
     "react-slick": "^0.30.2",
     "shadcn-ui": "^0.8.0",
+    "sharp": "^0.33.4",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
