--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "add": "^2.0.6",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^0.2.1",
     "command": "^0.0.1",
     "date-fns": "^3.6.0",
     "dialog": "^0.3.1",
