--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
     "next-intl": "^3.15.2",
-    "primereact": "^10.7.0",
     "popover": "^2.4.1",
+    "primereact": "^10.7.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-no-ssr": "^1.1.0",
     "react-slick": "^0.30.2",
     "shadcn-ui": "^0.2.3",
     "sharp": "^0.33.4",
